Update and rename gp_print_txt.css to gp_print.css

--- a/gp_print.css
+++ b/gp_print.css
@@ -4,8 +4,8 @@
    Tutorial 5
    Case Problem 1
    
-   Author:   
-   Date:     
+   Author:   Zack Zhao
+   Date:     2022-09-23
    
    Filename: gp_print.css
 
