--- a/gp_print.css
+++ b/gp_print.css
@@ -19,14 +19,35 @@
 
 /* Hidden Objects */
 
-
-
-
+nav.horizontal, footer, article {
+	display: none;
+}
 
 
 /* Comic Book Sheet Styles */
 
+section#sheet {
+	width: 6in;
+	margin: 0 auto;
+}
 
+img.size1 {
+	width: 5in;
+}
+
+img.size1 {
+	width: 5in;
+}
+
+
+img.size1 {
+	width: 5in;
+}
+
+
+img.size1 {
+	width: 5in;
+}
 
 
 
